--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     
                       <span></span>
                     </div>
-                    <h4 class="heading-4 pri-color mt-s mb-s">Android / Front-End Developer 👨‍💻</h4>
+                    <h4 class="heading-4 pri-color mt-s mb-s">Android / Front-End Dev 👨‍💻</h4>
                     <p class="paragraph mb-m">Crafting seamless user experiences for Android and beyond.</p>
                     <a href="https://tally.so/r/3EdNxr" class="cta">contact me</a>
                 </div>
@@ -135,7 +135,7 @@
             <main>
                 <!-- project section -->
                 <section id="projects" class="project">
-                    <h5 class="heading-5 sec-color mb-s">featured projects &mdash;</h5>
+                    <h5 class="heading-5 sec-color mb-s">featured &mdash;</h5>
                     <h2 class="heading-2">Stuff I’ve worked on 📁</h2>
                     <div class="project-box__wrapper">
                         <div class="project-box">
@@ -154,8 +154,8 @@
                                 <a href="#" target="_blank" rel="noopener noreferrer"><img src="./img/svg/link.svg" alt="link icon"></a>
                             </div>
                             <div class="project-box__content">
-                                <h3 class="heading-3 mb-l">Safarika<br>Adventure.</h3>
-                                <h5 class="heading-5">HTML/SCSS &nbsp; JS</h5>
+                                <h3 class="heading-3 mb-l">Bug Bounty<br>Stuff.</h3>
+                                <h5 class="heading-5">Type of Bugs/Tools </h5>
                             </div>
                         </div>
                         <div class="project-box">
@@ -164,7 +164,7 @@
                                 <a href="#" target="_blank" rel="noopener noreferrer"><img src="./img/svg/link.svg" alt="link icon"></a>
                             </div>
                             <div class="project-box__content">
-                                <h3 class="heading-3 mb-l">Gudfood<br>Restaurant.</h3>
+                                <h3 class="heading-3 mb-l">Kite<br>Restaurant.</h3>
                                 <h5 class="heading-5">HTML/SCSS &nbsp; JS</h5>
                             </div>
                         </div>
@@ -182,7 +182,7 @@
                                 <a href="https://www.behance.net/shuklasrk" target="_blank" rel="noopener noreferrer"><img src="./img/svg/behance.svg" alt="behance logo"></a>
                             </div>
                             <div class="project-box__content">
-                                <h3 class="heading-3 mb-l">umeh<br>Brand Identity.</h3>
+                                <h3 class="heading-3 mb-l"><br>Brand Identity.</h3>
                                 <h5 class="heading-5">ai &nbsp; ps</h5>
                             </div>
                         </div>
