--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                         </div>
                         <div class="project-box">
                             <div class="project-box__link">
-                                <a href="#" target="_blank" rel="noopener noreferrer"><img src="./img/svg/github.svg" alt="github logo"></a>
-                                <a href="#" target="_blank" rel="noopener noreferrer"><img src="./img/svg/link.svg" alt="link icon"></a>
+                                <a href="https://github.com/rajat4722/Stuff-Bug-Bounty" target="_blank" rel="noopener noreferrer"><img src="./img/svg/github.svg" alt="github logo"></a>
+                                <a href="https://github.com/rajat4722/Stuff-Bug-Bounty" target="_blank" rel="noopener noreferrer"><img src="./img/svg/link.svg" alt="link icon"></a>
                             </div>
                             <div class="project-box__content">
                                 <h3 class="heading-3 mb-l">Bug Bounty<br>Stuff.</h3>
